LPS-110363 Calculate the min-with in render based in the length of current for avoid jumping UI

--- a/modules/apps/ratings/ratings-taglib/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/ratings/ratings-taglib/src/main/resources/META-INF/resources/css/main.scss
@@ -48,7 +48,6 @@
 	.animated-counter {
 		display: inline-flex;
 		justify-content: center;
-		min-width: 3ch;
 		position: relative;
 
 		.previous {
